# Folio

./: .gitignore  Cargo.toml  README.md  latest.json  make_icon.py  package.json
crates/library-core/: Cargo.toml
crates/library-core/src/: lib.rs
crates/media-core/: Cargo.toml
crates/media-core/src/: edit.rs  lib.rs
frontend/: index.html  main.js  package-lock.json  package.json  style.css
scripts/: package-macos.sh
src-tauri/: Cargo.toml  scratch.rs  scratch2.rs  scratch3.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: catalog.rs  media.rs  metadata.rs  mod.rs  recent.rs
