[workspace]
members = [
    "crates/media-core",
    "crates/library-core",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Angelos"]

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.8"
camino = "1.1"
dirs = "6.0"
tauri = { version = "2.0.0", features = [] }
tauri-build = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-updater = "2.0.0"
image = { version = "0.25", default-features = true, features = ["jpeg", "png", "webp", "avif", "tiff"] }
kamadak-exif = "0.6"
lru = "0.16"
parking_lot = "0.12"
rayon = "1.11"
rfd = "0.15"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
walkdir = "2.5"
memmap2 = "0.9"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "deny"
expect_used = "deny"

[workspace.lints.rust]
unsafe_code = "deny"

# Optimize dependencies in dev builds — image decoding is 10-30x faster
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
