[package]
name = "folio"
version = "1.1.0"
description = "A Phiewer clone"
authors = ["you"]
edition = "2024"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-updater = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
library-core = { path = "../crates/library-core" }
media-core = { path = "../crates/media-core" }
anyhow = { workspace = true }
parking_lot = { workspace = true }
urlencoding = "2.1"
mime_guess = "2.0"
rfd = "0.15"
