[package]
name = "library-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
dirs.workspace = true
image.workspace = true
media-core = { path = "../media-core" }
rusqlite.workspace = true
walkdir.workspace = true
rayon.workspace = true
