[package]
name = "media-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
image.workspace = true
kamadak-exif.workspace = true
serde.workspace = true
thiserror.workspace = true
walkdir.workspace = true
memmap2.workspace = true
